k8s/addons/base/headlamp/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-redirect
  namespace: headlamp
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      kind: Gateway
      sectionName: http
  hostnames:
    - ${TF_HEADLAMP_HOSTNAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      kind: Gateway
      sectionName: https
  hostnames:
    - ${TF_HEADLAMP_HOSTNAME}
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: "https"
